Fixing project name alignment issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,41 +36,22 @@ h2{
 }
 
 body {
-    /* height: 99%; */
+    height: 99%;
     color: #777777;
     background-color: #ffffff;
     border-color: #cccccc;
     font-family: Arial, Helvetica, sans-serif;
     background-image: url("../images/gravel.png");
-    /* display: flex;
-    flex-direction: column;*/
-    overflow: auto; 
     width: 100%;
+    overflow: auto;
 }
   
 .content {
     padding-left: 15px;
     margin-bottom: 20px;
     background-color: #ffffff;
-}
-
-/*
-
-
-/* 
-.projects {
-    display: flex;
-    flex-direction: row;
-    flex-flow: row wrap;
-    justify-content: stretch;
-}
-*/
-/* .project {
-    margin: 20px;
-    float: left;
     overflow: auto;
-    position: relative;
-}  */
+}
 
 
 h3{
@@ -78,14 +59,18 @@ h3{
     color: #ffffff;
     text-align: center;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    padding: 10px;
+    padding: 3%;
+    margin-left: -15px;
+    margin-right: 15px;
+   
 }
+
 
  .project-name {
     z-index: 1;
     position: absolute;
     bottom: 3%;
-      /* width: 100%;   */
+    
 } 
 
 
